src/test/deca/syntax/invalid/sansobjet/DeclaToBigFloatDec.deca
//Erreur de compilation: arrondi a l infini
//Description: teste creation folttant converti a l infini
//Resultats: erreur ligne 5: arrondi a l'infini
{
    float t = 3.40282357E38;
}
